typescript/checker/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.ts.stderr
error: TS1005
 --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.ts:5:20
  |
5 | var BOOLEAN1 = ANY delete ;     //expect error
  |                    ^^^^^^

error: TS2703
 --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.ts:5:26
  |
5 | var BOOLEAN1 = ANY delete ;     //expect error
  |                          ^

error: Unexpected token Some(Semi)
 --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.ts:5:27
  |
5 | var BOOLEAN1 = ANY delete ;     //expect error
  |                           ^

error: TS2703
 --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.ts:8:22
  |
8 | var BOOLEAN2 = delete ;
  |                      ^

error: Unexpected token Some(Semi)
 --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.ts:8:23
  |
8 | var BOOLEAN2 = delete ;
  |                       ^

error: TS1102
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.ts:13:16
   |
13 |         delete s;      //expect error
   |                ^

error: TS2703
  --> $DIR/tests/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorInvalidOperations.ts:13:16
   |
13 |         delete s;      //expect error
   |                ^

